--- a/styles/base.css
+++ b/styles/base.css
@@ -59,7 +59,7 @@ main h1 {
 }
 .card {
     background-color: white;
-    display: flexbox;
+    display: flex;
     border: 1px solid rgb(185, 185, 185);
     margin: 10px;
     border-radius: 10px;
