--- a/styles/base.css
+++ b/styles/base.css
@@ -60,9 +60,11 @@ main h1 {
 .card {
     background-color: white;
     display: flex;
+    flex-direction: column;
     border: 1px solid rgb(185, 185, 185);
     margin: 10px;
     border-radius: 10px;
+
 }
 .card h2 {
     background-color: var(--header-background);
@@ -89,10 +91,11 @@ footer {
     flex-direction: column;
     text-align: center;
     padding: 2px;
-    position: fixed;
+    position: sticky;
     left: 0;
     bottom: 0;
     width: 100%;
+    margin-top: auto;
 }
 .adress {
     display: flex;
