--- a/styles/base.css
+++ b/styles/base.css
@@ -1,6 +1,9 @@
 :root {
     --header-background: #4E0707;
     --global-hover: #ff0000;
+    --text-color:white;
+    --background-color: white;
+
 }
 
 h1, h2 {
@@ -33,18 +36,42 @@ header span {
     margin: 20px;
     border-radius: 10%;
 }
+#name {
+    font-size: 1.5rem;
+    width: 130px;
+    word-wrap: break-word;
+}
+/* hamburger menu */
+#menu {
+    font-size: 1.5rem;
+    border: 0;
+    background: none;
+    color: white;
+    position: absolute;
+    left: 0;
+    top: 25px;
+    padding: 15px;
+}
+#menu::before {
+    content: "☰";
+}
+#menu.active::before{ 
+    content: "✕";
+}
 nav {
+    display: none;
+}
+nav.active {
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: black;
 }
 nav a {
+    display: block;
+    padding: 15px;
+    color: #fff !important; 
     text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    margin: 0 20px 0 20px;   
-    padding: 2%;
 }
 nav a:hover {
     color: var(--global-hover);
@@ -62,7 +89,7 @@ main h1 {
     margin-bottom: 20px;
 }
 .card {
-    background-color: white;
+    /* background-color: white; */
     display: flex;
     flex-direction: column;
     border: 1px solid rgb(185, 185, 185);
@@ -120,9 +147,44 @@ footer {
     margin-top: auto;
 }
 
-.active ::before {
+nav a.active::before {
 	content: "♦";
     margin-right: 5px;
     color: red;
     text-shadow: 0 0 5px red;
 }
+
+/* .active ::before {
+	content: "♦";
+    margin-right: 5px;
+    color: red;
+    text-shadow: 0 0 5px red;
+} */
+
+.hero picture img {
+    /* max-width: 960px; */
+    margin: 0 auto;
+    display: block;
+}
+
+#dark {
+    position: fixed;
+    right: 0;
+    margin: 15px;
+    font-size:2rem;
+    border: 0;
+    background: none;
+    color: white;
+    padding: 15px;
+    cursor: pointer;
+}
+
+#dark::before {
+    background: none;
+    content: "☾";
+}
+#dark.active::before {
+    background: none;
+    content: "☼";
+}
+
