--- a/styles/larger.css
+++ b/styles/larger.css
@@ -1,8 +1,17 @@
 @media screen and (min-width: 500px) {
 
+    #name {
+        font-size: 2rem;
+        width: 300px;
+    }
+    #menu {
+        display: none;
+    }
     nav {
+        display: flex;
         flex-direction: row;
         justify-content: center;
+        background-color: black;
     }
     .cards-container {
         display: grid;
@@ -15,10 +24,8 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
+        margin-top: 20px;
+
     }
     .adress, #copyright, #author {
         padding-right: 10px;
@@ -27,6 +34,7 @@
     #updated {
         display: block;
         position: fixed;
-        bottom: 0;
+        margin-top: 40px;
+        
     }
 }
