--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -22,7 +22,7 @@
         font-size: 1.3rem;
         padding: 10px;
         padding-right: 25px;
-
+        font-family: Montserrat;
     }
     nav a:hover {
         text-decoration: underline;
@@ -42,5 +42,30 @@
    }
    .grid-container {
        max-width: 50%;
+   }
+   .banner-grid {
+       display: grid;
+       grid-template-columns: 1fr 1fr;
+   }
+   .banner {
+       max-width: 70%;
+       min-height: 200px;
+   }
+   .banner h2, .banner p {
+       left: 0;
+       margin-left: 0;
+       padding-left: 20px;
+       padding-right: 20px;
+       
+   }
+   footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    background-color: var(--accent1-color);
+   }
+   footer p {
+    padding-right: 25px;
+    padding-left: 25px;
    }
 }
