--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -31,6 +31,9 @@
     header {
         padding-top: 90px;
     }
+    header h1 {
+        font-size: 2rem;
+    }
     #logo {
         width: 150px;
     }
@@ -44,8 +47,11 @@
        max-width: 50%;
    }
    .banner-grid {
-       display: grid;
-       grid-template-columns: 1fr 1fr;
+       display: flex;
+       flex-direction: row;
+       justify-content: center;
+       gap: 30px;
+       padding: 30px;
    }
    .banner {
        max-width: 70%;
@@ -67,5 +73,12 @@
    footer p {
     padding-right: 25px;
     padding-left: 25px;
+   }
+   footer a {
+       color: var(--primary-color);
+       text-decoration: none;
+   }
+   footer a:hover {
+       text-decoration: underline;
    }
 }
