--- a/styles/larger.css
+++ b/styles/larger.css
@@ -34,12 +34,10 @@
     }
     .adress, #copyright, #author {
         padding-right: 10px;
-        margin-bottom: 20px;
     }
     #updated {
-        display: block;
-        position: fixed;
-        margin-top: 40px;
+        padding-left: 10px;
+        margin-bottom: 17px;
         
     }
     .hero img {
