--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -260,7 +260,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: Montserrat;
     font-weight: 600;
-    color: var(--accent1-color);
+    color: var(--accent1-color)
 }
 p, a {
     font-family: Montserrat;
@@ -271,4 +271,87 @@ p, a {
 }
 .action button {
     background-color: var(--accent2-color);
+}
+
+/* discover page css */
+.calendar iframe {
+    height: 350px;
+    min-width: 300px;
+    margin-top: 80px;
+}
+.sidebar {
+    display: relative;
+    margin: 0 auto;
+    border-bottom-left-radius: 10px;
+    background-color: var(--accent1-color);
+    min-width: 300px;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 100px 500px 500px;
+    padding: 10px;
+    color: black;
+    text-align: center;
+    border-bottom-right-radius: 10px;     
+}
+.sidebar div {
+    border: 1px solid var(--primary-color);
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+    background-color: var(--primary-color);
+}
+
+.feed, .feed img, .post-container {
+    position: relative;
+    max-width: 90%;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+}
+.post-container {
+    margin-bottom: 50px;
+    background-color: var(--accent1-color);
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+    
+}
+.post-container h3, .post-container p, .post-container img {
+    text-align: center;
+    color: white;   
+    padding-top: 10px;
+    padding: 10px;
+}
+.interactions button {
+    background: none;
+    background-color: var(--accent1-color);
+    color: white;
+    font-size: 1rem;
+    padding: 10px;
+    margin: 10px;
+    cursor: pointer;
+    border-radius: 50px;
+    margin-bottom: 15px;
+} 
+
+.welcome p{
+    font-size: large;
+}
+
+#discover-logo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    margin-top: 5px;
+}
+#discover-logo img{
+    width: 100px;
+}
+#discover-logo p {
+    font-size: 1.5rem;
+    margin: -10px;
+    color: var(--accent1-color);
 }
