--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -153,7 +153,7 @@ main h2 {
     z-index: 1;
 }
 footer {
-    background-color: black;
+    background-color: var(--accent1-color);
     color: white;
     display: flex;
     flex-direction: column;
@@ -278,9 +278,10 @@ p, a {
     height: 350px;
     min-width: 300px;
     margin-top: 80px;
+    border: none;
 }
 .sidebar {
-    display: relative;
+    position: relative;
     margin: 0 auto;
     border-bottom-left-radius: 10px;
     background-color: var(--accent1-color);
@@ -288,7 +289,7 @@ p, a {
 
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 100px 500px 500px;
+    grid-template-rows:150px 100px 500px 500px;
     padding: 10px;
     color: black;
     text-align: center;
@@ -344,14 +345,13 @@ p, a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    margin-bottom: 20px;
-    margin-top: 5px;
 }
 #discover-logo img{
-    width: 100px;
+    width: 50px;
+    margin-top: 20px;
+    margin-bottom: -20px;
 }
-#discover-logo p {
+#discover-logo h3 {
     font-size: 1.5rem;
-    margin: -10px;
     color: var(--accent1-color);
 }
