--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -33,6 +33,7 @@
     }
     header h1 {
         font-size: 2rem;
+        text-align: left;
     }
     #logo {
         width: 150px;
@@ -136,6 +137,15 @@
     #discover-logo h1 {
         font-size: 1.5rem;
         padding-left: 5px; 
+    }
+
+    /* Join Page */
+    .join-grid-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+    #join-page form {
+        margin-bottom: 20px;
     }
 }
 
