--- a/styles/base.css
+++ b/styles/base.css
@@ -208,3 +208,17 @@ nav a.active::before {
     margin: 0 auto;
     display: block;
 }
+
+#weather {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+}
+#weather-icon {
+    width: 50px;
+    height: 50px;
+}
