--- a/styles/base.css
+++ b/styles/base.css
@@ -106,8 +106,18 @@ main h1 {
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
 }
-ul {
-    list-style-type: none; 
+#links-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    & h3 {
+        margin-bottom: -5px;
+    }
+    & a {
+        color: rgb(1, 255, 242);
+    }
 }
 .card p {
     text-align: center;
