--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -147,9 +147,15 @@
     #join-page form {
         margin-bottom: 20px;
     }
+
+    /* members page */
+    #members > div {
+        flex: 1 0 48%;
+        max-width: 48%;
+    }
 }
 
-    @media screen and (min-width: 500px) and (max-width: 800px) {
+@media screen and (min-width: 500px) and (max-width: 800px) {
     .sidebar {
         margin: 0 auto;
         float: none;
@@ -165,3 +171,5 @@
         max-width: 90%;
     }
 }
+
+
