Defeated The Final Boss

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -49,7 +49,7 @@
    }
    .banner-grid {
        display: flex;
-       flex-direction: row;
+       flex-direction: column;
        justify-content: center;
        gap: 30px;
        padding: 30px;
