--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -20,6 +20,11 @@ a:visited {
     color: var(--secondary-color);
 }
 
+#currentLocation {
+    color: var(--accent2-color);
+
+}
+
 #hero {
     position: absolute;
     top: 0;
@@ -67,6 +72,31 @@ header h1 {
     border-radius: 10px;
 
 }
+#attend-meet {
+    width: 50%;
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 10px;
+    margin: 10px;
+    background-color: var(--primary-color);
+    margin: 0 auto;
+    text-align: center;
+    display: block
+}
+#attend-meet a {
+    color: black;
+    margin: 0 auto;
+    background-color: var(--accent3-color);
+    padding: 5px;
+    border-radius: 10px;
+}
+
+#attend-meet a:hover {
+    background-color: black;
+    color: var(--accent3-color);
+    text-decoration: none;
+}
+
 .event {
     position: relative;
     display: flex;
@@ -75,7 +105,8 @@ header h1 {
     border-radius: 5%;
     border: 1px solid black;
     margin: 50px auto;
-    width: 80%;
+    width: 200px;
+    height: 200px;
     overflow: hidden;
 }
 .event h2 {
@@ -87,14 +118,24 @@ header h1 {
 
 }
 .event img{
-    position: relative;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 5%;
+    border-radius: 10px;
     z-index: -1;
+}
+#event-p{
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    width: 50%;
+    z-index: 0;
+    color: black;
+    font-size: 1rem;
+    padding: 10px;
+    background-color: var(--primary-color);
+    border-radius: 10px;
+    border: 1px solid black;
 }
 main h2 {
     text-align: center;
@@ -140,15 +181,34 @@ main h2 {
     width: 80%;
     overflow: hidden;
 }
-.banner img {
-    position: relative;
+.banner .background {
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 10px;
-    z-index: -1;
+    z-index: -999;
+}
+#weather {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgba(0, 0, 0, 0.644);
+    color: white;
+    margin-top: 50px;
+}
+#weather-icon {
+    width: 50px;
+    height: 50px;
+}
+#weather div{
+    margin-right: 30px
 }
 .banner h2 {
     position: absolute;
@@ -157,12 +217,20 @@ main h2 {
     margin-left: 70px;
     z-index: 1;
 }
-.banner p {
-    position: absolute;
+.banner .spotlight {
     left: 0;
-    margin-left: 70px;
-    margin-top: 60px;
+    margin: 0 auto;
     z-index: 1;
+    background-color: var(--accent2-color);
+    color: black;
+    padding: 10px;
+    border-radius: 10px;
+    border: #000 solid 1px;
+    width: 80%;
+    margin-top: 50px
+}
+.spotlight img {
+    border-radius: 50%;
 }
 footer {
     background-color: var(--accent1-color);
@@ -458,9 +526,17 @@ p, a {
     background-color: #f7d000;
     color: black;
 }
+#thankyou-page {
+    flex-direction: column;
+    align-items: center;
+}
 #thankyou-page .message {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 100px;
+    padding-top: 100px;
+    padding-bottom: 200px;
     text-align: center;
-    padding: 150px;
     background: linear-gradient(90deg, var(--background-color) 0%, #fffcd8 100%);
 }
 /* directory page */
@@ -510,4 +586,19 @@ p, a {
 }
 #members a {
     color: var(--accent1-color);
+}
+
+/* final touches */
+#cta a {
+    color: rgb(0, 0, 0);
+    background-color: var(--accent3-color);
+    padding: 5px;
+    border-radius: 10px;
+}
+#cta a:hover {
+    background-color: black;
+    color: var(--accent3-color);
+}
+#cta a & a:visited{
+    text-decoration: none;
 }
